--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,6 +4,17 @@ jobs:
   test-laravel-project:
     name: Run Tests of project
     runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: test_db
+        ports:
+          - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -30,6 +41,7 @@ jobs:
           php artisan cache:clear
           php artisan config:clear
           php artisan key:generate
+          chmod -R 777 storage bootstrap/cache
 
       - name: Cache npm cache
         uses: actions/cache@v2
@@ -44,3 +56,6 @@ jobs:
 
       - name: Run testsuite
         run: vendor/bin/phpunit
+        env:
+          DB_DATABASE: test_db
+          DB_PORT: ${{ job.services.mysql.ports[3306] }}
