--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -59,3 +59,29 @@ jobs:
         env:
           DB_DATABASE: test_db
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
+
+  build-assets:
+    name: Build JS & CSS
+    runs-on: ubuntu-latest
+    needs: test-laravel-project
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Cache npm cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+
+      - name: Install npm dependencies & build
+        run: |
+          npm install
+          npm run production
+
+      - name: Upload built assets
+        uses: actions/upload-artifact@v2
+        with:
+          name: assets
+          path: public
