Move building of assets to deployment job, fixing issues where tailwindcss classes are purged due to missing vendor blade components.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,31 +65,31 @@ jobs:
           DB_DATABASE: test_db
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
 
-  build-assets:
-    name: Build JS & CSS
-    runs-on: ubuntu-latest
-    needs: run-test
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v2
-      - name: Cache npm cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
-
-      - name: Install npm dependencies & build
-        run: |
-          npm install
-          npm run production
-
-      - name: Upload built assets
-        uses: actions/upload-artifact@v2
-        with:
-          name: assets
-          path: public
+#  build-assets:
+#    name: Build JS & CSS
+#    runs-on: ubuntu-latest
+#    needs: run-test
+#    if: github.ref == 'refs/heads/main'
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Cache npm cache
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.npm
+#          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+#          restore-keys: |
+#            ${{ runner.os }}-npm-
+#
+#      - name: Install npm dependencies & build
+#        run: |
+#          npm install
+#          npm run production
+#
+#      - name: Upload built assets
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: assets
+#          path: public
 
   deploy:
     name: Deploy
@@ -120,11 +120,24 @@ jobs:
       - name: Install composer dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
-      - name: Download built assets
-        uses: actions/download-artifact@v2
+      - name: Cache npm cache
+        uses: actions/cache@v2
         with:
-          name: assets
-          path: public
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+
+      - name: Install npm dependencies & build
+        run: |
+          npm install
+          npm run production
+
+#      - name: Download built assets
+#        uses: actions/download-artifact@v2
+#        with:
+#          name: assets
+#          path: public
 
       - name: Deploy
         uses: deployphp/action@master
