--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,8 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [run-test, build-assets]
+#    needs: [run-test, build-assets]
+    needs: run-test
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
