--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 #    needs: [run-test, build-assets]
-    needs: run-test
+#    needs: run-test
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
