--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,37 +65,10 @@ jobs:
           DB_DATABASE: test_db
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
 
-#  build-assets:
-#    name: Build JS & CSS
-#    runs-on: ubuntu-latest
-#    needs: run-test
-#    if: github.ref == 'refs/heads/main'
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Cache npm cache
-#        uses: actions/cache@v2
-#        with:
-#          path: ~/.npm
-#          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-#          restore-keys: |
-#            ${{ runner.os }}-npm-
-#
-#      - name: Install npm dependencies & build
-#        run: |
-#          npm install
-#          npm run production
-#
-#      - name: Upload built assets
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: assets
-#          path: public
-
-  deploy:
-    name: Deploy
+  build-assets:
+    name: Build JS & CSS
     runs-on: ubuntu-latest
-#    needs: [run-test, build-assets]
-#    needs: run-test
+    needs: run-test
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
@@ -134,11 +107,26 @@ jobs:
           npm install
           npm run production
 
-#      - name: Download built assets
-#        uses: actions/download-artifact@v2
-#        with:
-#          name: assets
-#          path: public
+      - name: Upload built assets
+        uses: actions/upload-artifact@v2
+        with:
+          name: assets
+          path: public
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+#    needs: [run-test, build-assets]
+    needs: build-assets
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Download built assets
+        uses: actions/download-artifact@v2
+        with:
+          name: assets
+          path: public
 
       - name: Deploy
         uses: deployphp/action@master
