--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,6 +121,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
+
       - name: Download built assets
         uses: actions/download-artifact@v2
         with:
