--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Test Project
-on: [push, pull_request]
+on: [ push, pull_request ]
 jobs:
   run-test:
     name: Run Tests of project
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -29,8 +29,8 @@ jobs:
         run: |
           echo "::set-output name=dir::$(composer config cache-files-dir)"
 
-      - name: Cache composer cache
-        uses: actions/cache@v2
+      - name: Cache composer dependencies
+        uses: actions/cache@v3
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -48,21 +48,20 @@ jobs:
           php artisan key:generate
           chmod -R 777 storage bootstrap/cache
 
-      - name: Cache npm cache
-        uses: actions/cache@v2
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
+          node-version: 18
+          cache: 'npm'
 
       - name: Install npm dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run testsuite
         run: vendor/bin/phpunit
         env:
-          DB_DATABASE: test_db
+          DB_CONNECTION: mysql
+          DB_DATABASE: ${{ job.services.mysql.env.MYSQL_DATABASE }}
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
 
   build-assets:
@@ -70,7 +69,7 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -82,8 +81,8 @@ jobs:
         run: |
           echo "::set-output name=dir::$(composer config cache-files-dir)"
 
-      - name: Cache composer cache
-        uses: actions/cache@v2
+      - name: Cache composer dependencies
+        uses: actions/cache@v3
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
@@ -93,17 +92,15 @@ jobs:
       - name: Install composer dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
-      - name: Cache npm cache
-        uses: actions/cache@v2
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
+          node-version: 18
+          cache: 'npm'
 
       - name: Install npm dependencies & build
         run: |
-          npm install
+          npm ci
           npm run production
 
       - name: Upload built assets
@@ -119,7 +116,7 @@ jobs:
     needs: build-assets
     if: github.ref == 'refs/heads/main'
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
