--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
         run: vendor/bin/phpunit
         env:
           DB_CONNECTION: mysql
-          DB_DATABASE: ${{ job.services.mysql.env.MYSQL_DATABASE }}
+          DB_DATABASE: test_db
           DB_PORT: ${{ job.services.mysql.ports[3306] }}
 
   build-assets:
